--- a/Lab3_SVM Hyperparameter Tuning/Lab3_1_SVM_HardPrediction.ipynb
+++ b/Lab3_SVM Hyperparameter Tuning/Lab3_1_SVM_HardPrediction.ipynb
@@ -36,18 +36,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rDM6iIBDLXZk",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
         },
+        "id": "rDM6iIBDLXZk",
         "outputId": "412a05dd-a7a2-40e7-a6b2-31b67d639b59"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "FileNotFoundError",
           "evalue": "[Errno 2] No such file or directory: '/content/data_sample.csv'",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
@@ -231,7 +231,7 @@
       },
       "outputs": [],
       "source": [
-        "matrix_calculate_kernel(x_traint,x_train)\n"
+        "matrix_calculate_kernel(x_train,x_train)\n"
       ]
     },
     {
@@ -290,7 +290,7 @@
         "</font>\n",
         "</summary>\n",
         "\n",
-        "![image-2.png](attachment:image-2.png)\n",
+        "\n",
         "\n",
         "</details>\n"
       ]
@@ -437,14 +437,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "x_train"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "sfmQomybuUvg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "x_train"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -490,16 +490,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TR88pblyz8jr"
+      },
+      "outputs": [],
       "source": [
         "y_test_arr =  np.array(y_test.values)\n",
         "y_pred_arr = np.array(y_pred_arr)\n",
         "# y_pred_arr"
-      ],
-      "metadata": {
-        "id": "TR88pblyz8jr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -509,11 +509,7 @@
       },
       "outputs": [],
       "source": [
-        "  https://docs.google.com/document/d/1hvYw7qLAEy5PFyNd8OpDE_tJOdOpJPwerMuzDpa9P3M/edit### START CODE HERE ###\n",
-        "### START CODE HERE ###\n",
-        "\n",
-        "\n",
-        "\n",
+        " ### START CODE HERE ###\n",
         "\n",
         "TP = np.sum((y_pred_arr == 1) & (y_test_arr == 1))\n",
         "TN = np.sum((y_pred_arr == 0) & (y_test_arr == 0))\n",
@@ -558,16 +554,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YvCSj9fX6UNP"
+      },
       "source": [
         "#Ans\n",
         "1."
-      ],
-      "metadata": {
-        "id": "YvCSj9fX6UNP"
-      }
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "ML_Lab",
       "language": "python",
@@ -584,9 +583,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.13"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
